--- a/localisation/english/PB_SCA_l_english.yml
+++ b/localisation/english/PB_SCA_l_english.yml
@@ -13,7 +13,6 @@
   # AGGRESIVE EXPANSION
   ##########################
 
-  Aggressive_Expansion_tt:0 "§RAggressive Expansion§!:\nAggressive Expansion is a measure of how warlike your nation is perceived by other American tags, the higher your AE is the more likely the ai is going to send volunteers and lend lease to any nation you might be at war with. Too high AE may see the remaining minor American tags form a coalition against you, and even United Commonwealth involvement. The actual amount of AE you have accumulated is hidden so consider more diplomatic annexation options instead of outright declaring war."
   SCA_Increase_AE_Small_tt:0 "£GFX_SCA_AE AE will slightly §Rincrease!§!"
   SCA_Increase_AE_Avg_tt:0 "£GFX_SCA_AE AE will significantly §Rincrease!§!"
 
@@ -201,6 +200,18 @@
   SCA_The_Fair_Meal_Act_tt:0 "Modify §YSeven Deadly Sins§! by\nDivision Recovery Rate: §G+5.00%§!"
   SCA_The_Non_discrimination_Act_tt:0 "Modify §YSeven Deadly Sins§! by\nRecruitable Population: §Y2.00%§!"
   SCA_The_Equal_Rewards_Act_tt:0 "Modify §YSeven Deadly Sins§! by\nConsumer Goods Factories: §Y-3.00%§!"
+  SCA_Regress_Degeneracy_Tier_1_tt:0 "£red_skull_small  §RDegeneracy§! Tier regression progress: §H>5§!."
+  SCA_Regress_Degeneracy_Tier_2_tt:0 "£red_skull_small  §RDegeneracy§! Tier regression progress: §H>10§!."
+  SCA_Regress_Degeneracy_Tier_3_tt:0 "£red_skull_small  §RDegeneracy§! Tier regression progress: §H>15§!."
+  SCA_Regress_Degeneracy_Tier_4_tt:0 "£red_skull_small  §RDegeneracy§! Tier regression progress: §H>20§!."
+  SCA_Go_Down_Deg_Tier_tt:0 "£red_skull_small  §RDegeneracy§! Tier regresses by: §G-1§!"
+  SCA_Regress_Degeneracy_Tier_1:0 "Decrease Degeneracy Tier (5)"
+  SCA_Regress_Degeneracy_Tier_2:0 "Decrease Degeneracy Tier (4)"
+  SCA_Regress_Degeneracy_Tier_3:0 "Decrease Degeneracy Tier (3)"
+  SCA_Regress_Degeneracy_Tier_4:0 "Decrease Degeneracy Tier (2)"
+  SCA_Deg_Reg_1:0 "Has completed the previous Degeneracy Tier regression decision"
+  SCA_Deg_Reg_2:0 "Has completed the previous Degeneracy Tier regression decision"
+  SCA_Deg_Reg_3:0 "Has completed the previous Degeneracy Tier regression decision"
 
   ##########################
   # DYNAMIC MODIFIERS
@@ -643,7 +654,9 @@
 
   SCA_The_Great_Leap_Forward_tt_2:0 "\n§HImportant Note§!:\nA lot of focuses apply bonuses to every controlled state so to get the most out of your industry focuses it might be ideal to conquer nations first and then focus on expanding your industry."
 
-  SCA_Establish_The_Comittee_For_State_Security_tt:0 "£GFX_counter_intelligence  §HC§!.§HS§!.§HS§! will be unlocked as an Intelligance Agency\n\nChanges the £GFX_decision_icon_small §HWith Open Eyes§! mission timer to now last 100 days instead of 60\n\nAllows for the £GFX_territory_icon coring of liberated states under the £GFX_decision_icon_small §HA Truely American Revolution decisions§!"
+  SCA_Establish_The_Comittee_For_State_Security_tt:0 "£GFX_counter_intelligence  §HC§!.§HS§!.§HS§! will be unlocked as an Intelligance Agency"
+
+  SCA_Establish_The_Comittee_For_State_Security_2_tt:0 "Changes the £GFX_decision_icon_small §HWith Open Eyes§! mission timer to now last 100 days instead of 60\n\nAllows for the £GFX_territory_icon coring of liberated states under the £GFX_decision_icon_small §HA Truely American Revolution decisions§!"
  
   SCA_Portland_Said_Yes:0 "[TAC.getflag] Portland agreed to our demands"
   SCA_New_Walden_Said_Yes:0 "[NWA.getflag] New Walden agreed to our demands"
