Orbit Wars and AutoCrisis focus tree content

--- a/localisation/english/PB_Britain_l_english.yml
+++ b/localisation/english/PB_Britain_l_english.yml
@@ -781,6 +781,18 @@
   ENG_Master_World:0 "Masters of the Earth"
   ENG_Irish_Intervention_Timeout:0 "The Irish Secession War"
   ENG_Imperial_Management_Timeout:0 "Imperial Management Timeout"
+  ENG_Turing_Research:0 "Turing Research Program"
+  ENG_Thinking_Economy:0 "A Thinking Economy"
+  ENG_Workplace_Assignments:0 "Workplace Assignment Ministry"
+  ENG_Womens_Workers2:0 "Women's Filler Jobs Department"
+  ENG_Colonial_Industrialization:0 "Colonial Industrialization"
+  ENG_Post_Scarcity_Imperialism:0 "Post Scarcity Imperialism"
+  ENG_Technosocialism:0 "British Technosocialism"
+  ENG_Tory_Economy:0 "The New Tory Economy"
+  ENG_Edisonian_Economy:0 "Megacorporate Economy"
+  ENG_Dirigisme_Economy:0 "British Techno-Dirigisme"
+  ENG_Political_Machine:0 "Perpetually Pervasive Propaganda"
+  ENG_Weaponized_Unemployment:0 "Weaponized Unemployment"
 
   ENG_Commonwealth_Development_Funding:0 "Commonwealth Development Programme"
   ENG_Commonwealth_Research_Funding:0 "Commonwealth Research Assistance"
@@ -851,7 +863,65 @@
 
   ENG_Emergency_Defense_Measures_tt:0 "Any §RHostile Power§! has at least one infantry division on mainland §YBritain§!"
 
-  ENG_Emergency_Militia_tt:0 "§YEmergency Defense Militias§! will be mobolized"
+  ENG_Emergency_Militia_tt:0 "§YEmergency Defense Militias§! will be mobilized"
+
+  ENG_increase_stability_factor_low_tt:0 "§GIncreases§! §Ystability§! by §Y5%§!.\n"
+  ENG_increase_stability_factor_med_tt:0 "§GIncreases§! §Ystability§! by §Y10%§!.\n"
+  ENG_increase_stability_factor_high_tt:0 "§GIncreases§! §Ystability§! by §Y15%§!.\n"
+
+  ENG_decrease_stability_factor_low_tt:0 "§RDecreases§! §Ystability§! by §Y5%§!.\n"
+  ENG_decrease_stability_factor_med_tt:0 "§RDecreases§! §Ystability§! by §Y10%§!.\n"
+  ENG_decrease_stability_factor_high_tt:0 "§RDecreases§! §Ystability§! by §Y15%§!.\n"
+
+  ENG_increase_research_speed_low_tt:0 "§GIncreases§! §Yresearch speed§! by §Y2%§!.\n"
+  ENG_increase_research_speed_med_tt:0 "§GIncreases§! §Yresearch speed§! by §Y4%§!.\n"
+  ENG_increase_research_speed_high_tt:0 "§GIncreases§! §Yresearch speed§! by §Y6%§!.\n"
+
+  ENG_decrease_research_speed_low_tt:0 "§RDecreases§! §Yresearch speed§! by §Y2%§!.\n"
+  ENG_decrease_research_speed_med_tt:0 "§RDecreases§! §Yresearch speed§! by §Y4%§!.\n"
+  ENG_decrease_research_speed_high_tt:0 "§RDecreases§! §Yresearch speed§! by §Y6%§!.\n"
+
+  ENG_increase_consumer_goods_low_tt:0 "§GIncreases§! §Yconsumer goods§! by §Y2%§!.\n"
+  ENG_increase_consumer_goods_med_tt:0 "§GIncreases§! §Yconsumer goods§! by §Y4%§!.\n"
+  ENG_increase_consumer_goods_high_tt:0 "§GIncreases§! §Yconsumer goods§! by §Y6%§!.\n"
+
+  ENG_decrease_consumer_goods_low_tt:0 "§RDecreases§! §Yconsumer goods§! by §Y2%§!.\n"
+  ENG_decrease_consumer_goods_med_tt:0 "§RDecreases§! §Yconsumer goods§! by §Y4%§!.\n"
+  ENG_decrease_consumer_goods_high_tt:0 "§RDecreases§! §Yconsumer goods§! by §Y6%§!.\n"
+
+  ENG_increase_maximum_production_efficiency_low_tt:0 "§GIncreases§! §Ymaximum production efficiency§! by §Y5%§!.\n"
+  ENG_increase_maximum_production_efficiency_med_tt:0 "§GIncreases§! §Ymaximum production efficiency§! by §Y10%§!.\n"
+  ENG_increase_maximum_production_efficiency_high_tt:0 "§GIncreases§! §Ymaximum production efficiency§! by §Y15%§!.\n"
+
+  ENG_decrease_maximum_production_efficiency_low_tt:0 "§RDecreases§! §Ymaximum production efficiency§! by §Y5%§!.\n"
+  ENG_decrease_maximum_production_efficiency_med_tt:0 "§RDecreases§! §Ymaximum production efficiency§! by §Y10%§!.\n"
+  ENG_decrease_maximum_production_efficiency_high_tt:0 "§RDecreases§! §Ymaximum production efficiency§! by §Y15%§!.\n"
+
+  ENG_increase_production_factory_efficiency_gain_low_tt:0 "§GIncreases§! §Yproduction efficiency gain§! by §Y5%§!.\n"
+  ENG_increase_production_factory_efficiency_gain_med_tt:0 "§GIncreases§! §Yproduction efficiency gain§! by §Y10%§!.\n"
+  ENG_increase_production_factory_efficiency_gain_high_tt:0 "§GIncreases§! §Yproduction efficiency gain§! by §Y15%§!.\n"
+
+  ENG_decrease_production_factory_efficiency_gain_low_tt:0 "§RDecreases§! §Yproduction efficiency gain§! by §Y5%§!.\n"
+  ENG_decrease_production_factory_efficiency_gain_med_tt:0 "§RDecreases§! §Yproduction efficiency gain§! by §Y10%§!.\n"
+  ENG_decrease_production_factory_efficiency_gain_high_tt:0 "§RDecreases§! §Yproduction efficiency gain§! by §Y15%§!.\n"
+
+  ENG_increase_line_change_production_efficiency_gain_low_tt:0 "§GIncreases§! §Yline change efficiency§! by §Y5%§!.\n"
+  ENG_increase_line_change_production_efficiency_gain_med_tt:0 "§GIncreases§! §Yline change efficiency§! by §Y10%§!.\n"
+  ENG_increase_line_change_production_efficiency_gain_high_tt:0 "§GIncreases§! §Yline change efficiency§! by §Y15%§!.\n"
+
+  ENG_decrease_line_change_production_efficiency_gain_low_tt:0 "§RDecreases§! §Yline change efficiency§! by §Y5%§!.\n"
+  ENG_decrease_line_change_production_efficiency_gain_med_tt:0 "§RDecreases§! §Yline change efficiency§! by §Y10%§!.\n"
+  ENG_decrease_line_change_production_efficiency_gain_high_tt:0 "§RDecreases§! §Yline change efficiency§! by §Y15%§!.\n"
+
+  ENG_increase_industrial_capacity_factory_gain_low_tt:0 "§GIncreases§! §Yindustrial capacity§! by §Y5%§!.\n"
+  ENG_increase_industrial_capacity_factory_gain_med_tt:0 "§GIncreases§! §Yindustrial capacity§! by §Y10%§!.\n"
+  ENG_increase_industrial_capacity_factory_gain_high_tt:0 "§GIncreases§! §Yindustrial capacity§! by §Y15%§!.\n"
+
+  ENG_decrease_industrial_capacity_factory_gain_low_tt:0 "§RDecreases§! §Yindustrial capacity§! by §Y5%§!.\n"
+  ENG_decrease_industrial_capacity_factory_gain_med_tt:0 "§RDecreases§! §Yindustrial capacity§! by §Y10%§!.\n"
+  ENG_decrease_industrial_capacity_factory_gain_high_tt:0 "§RDecreases§! §Yindustrial capacity§! by §Y15%§!.\n"
+
+  ENG_Automation_Crisis_Ends_tt:0 "§RThe Automation Crisis Modifier will be removed§!\n\n"
 
   ##########################
   # DECISIONS
