--- a/localisation/english/PB_Government_l_english.yml
+++ b/localisation/english/PB_Government_l_english.yml
@@ -97,6 +97,7 @@ PB_No_Welfare:0 "No State Welfare"
 
 sociogenetics:0 "Sociogenetics Policy"
 PB_Sociogenetics_Allowed:0 "Sociogenetics Allowed"
+PB_Sociogenetics_Allowed_desc:0 ""
 PB_Sociogenetics_Normalized:0 "Sociogenetics Normalized"
 PB_Sociogenetics_Enforced:0 "Sociogenetics Enforced"
 PB_Sociogenetics_Racial:0 "Race-Based Sociogenetics"
@@ -441,7 +442,7 @@ PB_ENG_Royal_Arsenal:0 "Royal Arsenal"
 PB_ENG_RSAF_Enfield:0 "RSAF Enfield"
 PB_ENG_AIOC:0 "Anglo-Persian Oil Company"
 PB_ENG_ICAS:0 "Imperial Coal & Steel"
-PB_ENG_English_Electric:0 "English Electric"
+PB_ENG_English_Electric:0 "EIEC - London"
 PB_ENG_IBC:0 "Imperial Broadcasting Corporation"
 
 ##########################
