--- a/localisation/english/PB_countries_cosmetic_l_english.yml
+++ b/localisation/english/PB_countries_cosmetic_l_english.yml
@@ -1,6 +1,6 @@
 ﻿l_english:
 
- POL_autonomy_PB_Imperial_Autonomy:0 "Congress Poland"
+ POL_autonomy_PB_Imperial_Autonomy:0 "Autonomous Kingdom of Poland"
  NOR_autonomy_PB_Personal_Union:0 "Kingdom of Norway"
  PON_RUS_autonomy_PB_Imperial_Associate:0 "Pontus Governate"
  PON_RUS_autonomy_PB_Imperial_Associate_DEF:0 "the Pontus Governate"
