--- a/localisation/english/PB_countries_l_english.yml
+++ b/localisation/english/PB_countries_l_english.yml
@@ -2091,7 +2091,7 @@
  ECU_ss:0 "Ecuador"
  ECU_ss_DEF:0 "The Republic of Ecuador"
  ECU_jc:0 "Revolutionary Ecuador"
- ECU_jc_DEF:0 "The Revolutionary Republic Ecuador"
+ ECU_jc_DEF:0 "The Revolutionary Republic of Ecuador"
  ECU_ni_ADJ:0 "Ecuadorian"
  ECU_rc_ADJ:0 "Ecuadorian"
  ECU_lb_ADJ:0 "Ecuadorian"
@@ -2101,30 +2101,30 @@
  ECU_cn_ADJ:0 "Ecuadorian"
  ECU_an_ADJ:0 "Ecuadorian"
 
- PRU_ni:0 "Peru"
- PRU_ni_DEF:0 "The Republic of Peru"
- PRU_ds:0 "Peru"
- PRU_ds_DEF:0 "The Republic of Peru"
- PRU_rc:0 "Peru"
- PRU_rc_DEF:0 "The Republic of Peru"
- PRU_an:0 "Peru"
- PRU_an_DEF:0 "The Republic of Peru"
- PRU_cn:0 "Peru"
- PRU_cn_DEF:0 "The Republic of Peru"
- PRU_lb:0 "Peru"
- PRU_lb_DEF:0 "The Republic of Peru"
- PRU_ss:0 "Peru"
- PRU_ss_DEF:0 "The Republic of Peru"
- PRU_jc:0 "Peru"
- PRU_jc_DEF:0 "The Republic of Peru"
- PRU_ni_ADJ:0 "Peruvian"
- PRU_rc_ADJ:0 "Peruvian"
- PRU_lb_ADJ:0 "Peruvian"
- PRU_ss_ADJ:0 "Peruvian"
- PRU_jc_ADJ:0 "Peruvian"
- PRU_ds_ADJ:0 "Peruvian"
- PRU_cn_ADJ:0 "Peruvian"
- PRU_an_ADJ:0 "Peruvian"
+PRU_ni:0 "Regency of New Spain"
+PRU_ni_DEF:0 "The Regency of New Spain"
+PRU_ds:0 "Republic of North Peru"
+PRU_ds_DEF:0 "The Republic of North Peru"
+PRU_rc:0 "Republic of North Peru"
+PRU_rc_DEF:0 "The Republic of North Peru"
+PRU_an:0 "Republic of North Peru"
+PRU_an_DEF:0 "The Republic of North Peru"
+PRU_cn:0 "Republic of North Peru"
+PRU_cn_DEF:0 "The Republic of North Peru"
+PRU_lb:0 "Republic of North Peru"
+PRU_lb_DEF:0 "The Republic of North Peru"
+PRU_ss:0 "Republic of North Peru"
+PRU_ss_DEF:0 "The Republic of North Peru"
+PRU_jc:0 "Plurinational Republic of North Peru"
+PRU_jc_DEF:0 "The Plurinational Republic of North Peru"
+PRU_ni_ADJ:0 "Peruvian"
+PRU_rc_ADJ:0 "Peruvian"
+PRU_lb_ADJ:0 "Peruvian"
+PRU_ss_ADJ:0 "Peruvian"
+PRU_jc_ADJ:0 "Peruvian"
+PRU_ds_ADJ:0 "Peruvian"
+PRU_cn_ADJ:0 "Peruvian"
+PRU_an_ADJ:0 "Peruvian"
 
  CHR_ni:0 "Andine Federation"
  CHR_ni_DEF:0 "The Andine Federation"
