--- a/localisation/english/PB_Generic_Decisions_l_english.yml
+++ b/localisation/english/PB_Generic_Decisions_l_english.yml
@@ -122,3 +122,167 @@
   PB_Orbit_Wars_RP_tooltip_delayed:0 "Current §CResearch Points§!"
   OWS_Current_Failure_Chance:0 "§R[?ROOT.Local_Launch_Failure_Chance]%§!"
   OWS_Current_Success_Chance:0 "§G[?ROOT.Local_Launch_Success_Chance]%§!"
+
+  OBW_Has_50_RP_tt:0 "Has at least 50£research_points_small §CRsearch Points§!"
+  OBW_Has_75_RP_tt:0 "Has at least 75£research_points_small §CRsearch Points§!"
+  OBW_Has_100_RP_tt:0 "Has at least 100£research_points_small §CRsearch Points§!"
+  OBW_Has_125_RP_tt:0 "Has at least 125£research_points_small §CRsearch Points§!"
+  OBW_Has_150_RP_tt:0 "Has at least 150£research_points_small §CRsearch Points§!"
+
+  OBW_Has_50_RP_cost_tt:0 "§C50§!£research_points_small"
+  OBW_Has_50_RP_cost_tt_blocked:0 "§C50§!£research_points_small"
+  OBW_Has_75_RP_cost_tt:0 "§C75§!£research_points_small"
+  OBW_Has_75_RP_cost_tt_blocked:0 "§C75§!£research_points_small"
+  OBW_Has_100_RP_cost_tt:0 "§C100§!£research_points_small"
+  OBW_Has_100_RP_cost_tt_blocked:0 "§C100§!£research_points_small"
+
+  OBW_Has_125_RP_cost_tt:0 "§C125§!£research_points_small"
+  OBW_Has_125_RP_cost_tt_blocked:0 "§C125§!£research_points_small"
+
+  OBW_Has_150_RP_cost_tt:0 "§C150§!£research_points_small"
+  OBW_Has_150_RP_cost_tt_blocked:0 "§C150§!£research_points_small"
+
+  PB_Orbit_Wars_Aeronautic_Research:0 "Conduct a run of Aeronautics Research"
+
+  PB_Orbit_Wars_Launch_Rocket:0 "Initiate Launch"
+  PB_Orbit_Wars_Reset_Rocket_Design:0 "Reset Rocket Design"
+  PB_Orbit_Wars_Hide_All:0 "Hide All Component Sections"
+
+  PB_Orbit_Wars_View_Engines:0 "View Engine Parts"
+  PB_Orbit_Wars_Basic_Test_Engine:0 "Install a Basic Test Engine"
+  PB_Orbit_Wars_Acquire_Intermediate_Engine:0 "Develop an Intermediate Engine"
+  PB_Orbit_Wars_Acquire_Advanced_Engine:0 "Develop an Advanced Engine"
+  PB_Orbit_Wars_Acquire_Teleforce_Engine:0 "Develop a Teleforce Engine"
+  PB_Orbit_Wars_Acquire_Atomic_Engine:0 "Develop an Atomic Engine"
+
+  PB_Orbit_Wars_Intermediate_Engine:0 "Install an Intermediate Engine"
+  PB_Orbit_Wars_Advanced_Engine:0 "Install an Advanced Engine"
+  PB_Orbit_Wars_Teleforce_Engine:0 "Install a Teleforce Engine"
+  PB_Orbit_Wars_Atomic_Engine:0 "Install an Atomic Engine"
+
+  PB_Orbit_Wars_Solid_Fuel_Booster:0 "Install a Solid Fuel Compartment"
+  PB_Orbit_Wars_Liquid_Fuel_Booster:0 "Install a Liquid Fuel Compartment"
+  PB_Orbit_Wars_Hybrid_Fuel_Booster:0 "Install a Hybrid Fuel Compartment"
+  PB_Orbit_Wars_Teleforce_Fuel_Booster:0 "Install a Teleforce Accelerator"
+  PB_Orbit_Wars_Nuclear_Fuel_Booster:0 "Install a Nuclear Reactor"
+
+  PB_Orbit_Wars_Acquire_Liquid_Fuel:0 "Develop a Liquid Fuel Compartment"
+  PB_Orbit_Wars_Acquire_Hybrid_Fuel:0 "Develop a Hybrid Fuel Compartment"
+  PB_Orbit_Wars_Acquire_Teleforce_Fuel:0 "Develop a Teleforce Accelerator"
+  PB_Orbit_Wars_Acquire_Nuclear_Fuel:0 "Develop a Nuclear Accelerator"
+
+  PB_Orbit_Wars_View_Fuel:0 "View Fuel Parts"
+
+  PB_Orbit_Wars_View_Components:0 "View Component Parts"
+
+  tooltip_OBW_Rocket_Design_Reset:0 "This will §Yremove§! all currently chosen rocket parts"
+  tooltip_OBW_Hide_All_Reset:0 "This will §Yhide§! all Component Sections"
+  tooltip_OBW_Component_Parts_Visible:0 "This will open the §YComponent Parts§! Section"
+  tooltip_OBW_Fuel_Parts_Visible:0 "This will open the §YFuel Parts§! Section"
+  tooltip_OBW_Engine_Parts_Visible:0 "This will open the §YEngine Parts§! Section"
+
+  OBW_Component_Parts_Visible_tt:0 "Already Viewing Component Parts"
+  OBW_Fuel_Parts_Visible_tt:0 "Already Viewing Fuel Parts"
+  OBW_Engine_Parts_Visible_tt:0 "Already Viewing Engine Parts"
+
+  OBW_All_Parts_Installed_tt:0 "Has Installed an Engine and Fuel Tank"
+  tooltip_OBW_Rocket_Launched:0 "This will launch the Currently Assembled Rocket"
+  OBW_Launch_Not_in_Progress_tt:0 "A launch is not currently in progress"
+
+  tooltip_OBW_Basic_Engine_Stats:0 "Increases §GSuccess Chance§! by 25%\nIncreases §RFailure Chance§! by 25%"
+  tooltip_OBW_PB_Orbit_Wars_Intermediate_Engine_Stats:0 "Increases §GSuccess Chance§! by 30%\nIncreases §RFailure Chance§! by 25%"
+  tooltip_OBW_Advanced_Engine_Stats:0 "Increases §GSuccess Chance§! by 35%\nIncreases §RFailure Chance§! by 25%"
+  tooltip_Teleforce_Engine_Stats:0 "Increases §GSuccess Chance§! by 40%\nIncreases §RFailure Chance§! by 45%"
+  tooltip_OBW_Atomic_Engine_Stats:0 "Increases §GSuccess Chance§! by 55%\nIncreases §RFailure Chance§! by 45%"
+  OBW_Does_Not_Engine_Installed_tt:0 "Does not currently have an Engine Part installed"
+
+  OBW_Does_Not_Fuel_Installed_tt:0 "Does not currently have an Fuel Part installed"
+  tooltip_OBW_Solid_Fuel_Booster_Stats:0 "Increases §GSuccess Chance§! by 5%\nIncreases §RFailure Chance§! by 5%"
+  tooltip_OBW_Liquid_Fuel_Booster_Stats:0 "Increases §GSuccess Chance§! by 10%\nIncreases §RFailure Chance§! by 10%"
+  tooltip_OBW_Teleforce_Fuel_Booster_Stats:0 "Increases §GSuccess Chance§! by 15%\nIncreases §RFailure Chance§! by 20%"
+  tooltip_OBW_Nuclear_Fuel_Booster_Stats:0 "Increases §GSuccess Chance§! by 25%\nIncreases §RFailure Chance§! by 30%"
+
+  tooltip_OBW_Intermediate_Engine_Researched:0 "§YIntermediate Engines§! will be available for Rockets"
+  tooltip_OBW_Advanced_Engine_Researched:0 "§YAdvanced Engines§! will be available for Rockets"
+  tooltip_OBW_Teleforce_Engine_Researched:0 "§YTeleforce Engines§! will be available for Rockets"
+  tooltip_OBW_Atomic_Engine_Researched:0 "§YAtomic Engines§! will be available for Rockets"
+  tooltip_OBW_Atomic_Engine_Researched_Comedy:0 "It is strongly recommended not to pair this engine with the §YNuclear Launch System§! Component"
+
+  tooltip_OBW_Liquid_Fuel_Researched:0 "§YLiquid Fuel§! will be available for Rockets"
+  tooltip_OBW_Hybrid_Fuel_Researched:0 "§YHyrbid Fuel§! will be available for Rockets"
+  tooltip_OBW_Teleforce_Fuel_Researched:0 "§YTeleforce Accelerators§! will be available for Rockets"
+  tooltip_OBW_OBW_Nuclear_Fuel_Researched:0 "§YNuclear Reactors§! will be available for Rockets"
+
+  tooltip_OBW_Add_20_RP:0 "We will gain£research_points_small §C20 Research Points§!"
+
+  Orbit.2.t:0 "Guidance Sensor Failed"
+  Orbit.2.d:0 "Unfortunately, while we were launching our latest rocket, an unforeseen failure in its design has sent us back to the drawing board.  Apparently, while it was launching, one of our remote pilots attempted to steer it towards its intended target, but a malfunction in the guidance sensor sent it careening towards a nearby forest instead.\n\nAlthough this failure has given us valuable insights in guidance sensor maintenance, it was difficult cleaning up the debris and virtually none of the rocket parts were reusable."
+  Orbit.2.a:0 "Unlucky, but at least we know better for next time."
+
+  Orbit.2.t:0 "Failed Measurement Conversion"
+  Orbit.2.d:0 "It seems one of our rockets have been lost due to a simple math error.  One of our engineers, for whatever reason, had apparently programmed a flight calculator to use the metric system of measurement instead of imperial and forgot to convert it before sending it to the rocket construction site.  When our remote pilots attempted to steer it once it breached the atmosphere, it went flying into space and is at this point unrecoverable.\n\nAnother rocket and millions in funding have been wasted over one engineer's odd preference for the metric system."
+  Orbit.2.a:0 "Where is that engineer? I'm going to fire him for this!"
+
+  Orbit.3.t:0 "Failure to Launch"
+  Orbit.3.d:0 "The rocket we have invested so much into has failed to launch today due to a mechanical error. The apparatus holding the rocket until it is time for it to blast off accidently crushed the rocket like a empty RC can. It seems as if some mechanic used a negative value instead of a positive value for the programming of the umbilical cords holding the rocket up.\n\nAll our work is for nothing, and we will have to go back to the drawing board."
+  Orbit.3.a:0 "What a waste."
+
+  Orbit.4.t:0 "Explosion at Launch Site"
+  Orbit.4.d:0 "In a shock to our government, The rocket we've been working on has exploded due to the fuel line severing, ending up with multiple scientists and engineers dead. after further examination of the wreckage it appears that the nuts and bolts that physically held our rocket together were substandard at best.\n\nDue to this, a critical bolt melted, exposing all the rocket fuel to an open flame exploding the entire rocket and taking out multiple personnel.\n\nAlthough this is our fault, we will find a way to blame our enemies and accuse them of sabotage, hopefully distracting the grieving families of those deceased."
+  Orbit.4.a:0 "Jet fuel can melt steel bolts!"
+
+  Orbit.5.t:0 "Electrical Failure"
+  Orbit.5.d:0 "Embarrassing news, it appears as if our rocket has failed to launch due to a electrical error.The launch sequence uses a series of gears and tesla coils to send the electric pulses necessary to start the rocket. This did not happen, as some buffoon engineer used the wrong sized gear thus leading to the generation of too much torque, and thus the coils were fried.\n\nThis stunning error has cost our government a staggering amount of money as we have to entirely rewire the rocket. The engineer responsible will be harshly punished for this mistake."
+  Orbit.5.a:0 "Back to basics people!"
+
+  Orbit.6.t:0 "Atmospheric Burnout"
+  Orbit.6.d:0 "The rocket launch was successful, however the rocket was destroyed due to burning up in the atmosphere. The rocket was practically nothing but ash and dust by the time recovery teams reached ground zero of the wreckage.\n\nExamination shows that improper materials were used, and thus they were insufficient to withstand the heat of leaving the atmosphere. The rocket program is back to step one due to this error."
+  Orbit.6.a:0 "Outsource the materials, outsource the profits."
+
+  Orbit.7.t:0 "Unforseen Shutdown"
+  Orbit.7.d:0 "Due to an electrical problem, the rocket's remote controls shut down during launch and the rocket has been lost. R&D is conflicted to how this has occurred, but the consensus is that somehow the tesla coils necessary for the rockets computer work did not form a proper current at some point losing us control of the rocket.\n\nIt has been noted by observers that the rocket has probably gone somewhere into deep space to be lost forever to humanity. The best chance we have of getting it back is praying that maybe one day it will return back to us through being slingshot back to us if it happened to veer close to the moon."
+  Orbit.7.a:0 "Actually, on second thought. Maybe we don't want it back."
+
+  Orbit.8.t:0 "Crash and Burn"
+  Orbit.8.d:0 "It appears as if a communication error caused the rocket to be unable to breach the atmosphere causing it to land in an unpopulated area, causing some damage and fires. The local ecosystem suffered due to this error, but that pales in comparison to the loss of the rocket and materials.\n\nThe person responsible for the error that lost our rocket has been fired and blacklisted for this incident. The rest of the team will know to fear failure more then they crave success."
+  Orbit.8.a:0 "Orbit to Surface missiles, kind of."
+
+  Orbit.9.t:0 "Communication Lost"
+  Orbit.9.d:0 "An electrical malfunction temporarily disabled the rocket's remote controls, upon being re-enabled, the rocket and payload were found to be completely missing. R&D is split on how this occurred and where the rocket itself went as all calculations suggest that this scenario was impossible.\n\nSome think some undiscovered electrical phenomenon has occurred that warped the location of the rocket in space time. Some believe that extra terrestrials are involved while others suggest that Tesla himself has cursed the rocket.\n\nAn internal investigation indicates the control module was likely not bolted down properly."
+  Orbit.9.a:0 "Any more conspiracy theories?"
+
+  Orbit.10.t:0 "Cargo Cult Conundrum"
+  Orbit.10.d:0 "The rocket successfully launched, but veered off course and ended up landing in an underpopulated region of the Amazon, where it is now supposedly being worshipped as a gift from local deities by a previously undiscovered tribe.\n\nUpon further inspection from intelligence agencies, our secret services have reported back to us that this tribe sees the rocket as a good omen. These uncivilized tribals seem to believe the metal from the crash site is imbued with magic properties.\n\nThe rocket is damaged so heavily that it can no longer be tied to us or effectively salvaged, therefore they have come to the conclusion to let the natives have the rocket.\n\nThey seem to be getting more use out of it than we are anyway."
+  Orbit.10.a:0 "All praise the rocket!"
+
+  Orbit.11.t:0 "Unintentional Moon Landing"
+  Orbit.11.d:0 "In a strange twist of fate, the most recent rocket we launched was sent on a collision course with the moon, destroying the entire payload after landing in the Sea of Tranquillity.\n\nWhile the unlikeliness of the event has prompted an internal investigation of our space agency, we have been able to use the fact that we were still able to send a rocket to the moon to show that we have the potential to send a successful mission there! With our newspapers touting that men will be singing our national anthem on the lunar surface, maybe this mission was not so bad after all."
+  Orbit.11.a:0 "We, uh, we meant to do that."
+
+  Orbit.12.t:0 "Waterlogged"
+  Orbit.12.d:0 "Bureaucracy strikes once again! It appears as if rains the night before launch damaged the rockets electronics, resulting in a failure to launch. R&D is keen to smugly note how this is technically not their fault.\n\nThe offending members of R&D were politlely encouraged not to let the door hit them on the way out."
+  Orbit.12.a:0 "Slippery when wet"
+
+  Orbit.13.t:0 "Wild Wild West"
+  Orbit.13.d:0 "Our science team has come to a sour conclusion. The rocket successfully launched.... but it went off course and landed in the untamed American frontier.\n\nIt appears the locals have begun to use it as a tourist attraction, claiming it to be some kind of alien spaceship.\n\nThis will obviously set back our space program, but on the bright side, some lucky souls out in the frontier will make a few extra caps off our failure. "
+  Orbit.13.a:0 "A small airstrike should do the trick."
+
+  Orbit.14.t:0 "Research Setbacks"
+  Orbit.14.d:0 "During a test prior to launch, the rocket prematurely fired the engines, incinerating research personnel before exploding."
+  Orbit.14.a:0 ""
+
+  Orbit.15.t:0 "Tipping Point"
+  Orbit.15.d:0 "Failure to set up launching struts resulted in the rocket tipping over and falling before the launch sequence could start."
+  Orbit.15.a:0 ""
+
+  Orbit.16.t:0 "Enemy Unknown"
+  Orbit.16.d:0 "Our rocket was able to successfully launch and break through the atmosphere, but it appeared to begin suffering electrical malfunctions before it could complete the assigned tasks. Shortly after, the rocket and payload simply vanished from sensors without a trace. Just before losing contact, researchers used the on-board camera to snap a series of photos and transmit them to Earth.\n\nWhat we found was concerning, to say the least.\n\nAn unknown object can be seen on the horizon on a course to intercept the rocket. Analysis of the blurry images indicates the object was some kind of floating translucent glowing ship, emanating blue light. The research team has opted to claim the rocket was destroyed before entering the atmosphere and destroyed the photos, hoping to prevent any unbidden speculation by the public."
+  Orbit.16.a:0 "Let's just pretend we didn't see any of that."
+
+  Orbit.17.t:0 "From Beyond"
+  Orbit.17.d:0 "While we were able to launch our rocket successfully, issues emerged once it broke through the planet's atmosphere. Our remote control systems, reliant on radio transmissions, were suddenly overwhelmed with an unknown signal. Initially just thought to be interference, it was determined afterwards that the signal did not originate from Earth at all.\n\nThe loss of control over the rocket lead to it being lost, however the signal was successfully recorded and found to be semi-coherent. It contained a repeating sequence of prime numbers that were later decoded to indicate designs for some kind of unknown machine. The purpose of this device is unknown, and we still are unsure who sent the signal or where it originated from. Schematics for this device have been kicked over to a special research program to determine if we could even construct it in the first place."
+  Orbit.17.a:0 "Maybe we were better off alone?"
+
+  Orbit.18.t:0 "Knightwatch"
+  Orbit.18.d:0 "While the initial launch sequence went off without a hitch, it appears the rocket made contact with something in orbit. It's not entirely clear what it made contact with, but photos taken prior to the collision show a large metallic object in close proximity.\n\nOne of our researchers jokingly dubbed it the Black Knight, and despite our best efforts the name stuck. Since the incident this object has vanished from all sensors, and even now we still can't confirm if it was a genuine unidentified object or just a smudge on the lens.\n\nWhether or not it was anything serious, we're still down a rocket and have to deal with an increasingly superstitious research team."
+  Orbit.18.a:0 "Something's out there. Maybe."
