Small COE fixes

--- a/localisation/english/PB_CoE_l_english.yml
+++ b/localisation/english/PB_CoE_l_english.yml
@@ -46,6 +46,12 @@
   PB_CoE_Courland_Question:0 "Courland Question"
   PB_CoE_Courland_Question_desc:0 "Courland has been historically associated with the Polish-Lithuanian Commonwealth. Should we return this piece of Baltic coast to the Commonwealth or allow it to decide its own fate later?"
   PB_CoE_Prussian_Question:0 "East Prussian Question"
+  PB_CoE_Belarus_Question:0 "Revisiting the Polish-Ruthenian Border"
+  
+  PB_CoE_France_as_topic:0 "Discussing France"
+  PB_CoE_Spain_as_topic:0 "Discussing Spain"
+  PB_CoE_Italy_as_topic:0 "Discussing Italy"
+  PB_CoE_Poland_as_topic:0 "Discussing Poland"
 
   Coe_get_topic_France:0 "§GFrance§!"
   Coe_get_topic_Spain:0 "§GSpain§!"
