Automation Crisis and Orbit Wars Work
Pending playtest and balancing, semi-finalized sans loc

--- a/localisation/english/PB_Automation_Crisis_l_english.yml
+++ b/localisation/english/PB_Automation_Crisis_l_english.yml
@@ -24,6 +24,42 @@
   AutoCrisis.5.d:0 "Thanks to the Home Guard intervention in Wales, the rioting in Cardiff and Swansea have been brought under de-facto martial law. Home Guard troops continue to patrol the streets, supplemented by the local constabulary. Hardsuit troopers proved pivotal in pacifying the riots with minimum acceptable losses.\n\nWe face condenmnation from the British left, while the right supports the move. A mixed bag of a situation, and though anti-automation protests continue, Wales is under control for the moment."
   AutoCrisis.5.a:0 "Hooliganism will not be tolerated."
 
+  AutoCrisis.6.t:0 "Taking Stock of the Damages"
+  AutoCrisis.6.d:0 ""
+  AutoCrisis.6.a:0 "This is less than stellar."
+
+  AutoCrisis.7.t:0 "Our Current Situation"
+  AutoCrisis.7.d:0 ""
+  AutoCrisis.7.a:0 "Not great, not terrible."
+
+  AutoCrisis.8.t:0 "The EIEC Protests our Decision"
+  AutoCrisis.8.d:0 ""
+  AutoCrisis.8.a:0 "You'll get over it."
+
+  AutoCrisis.9.t:0 "The EIEC Supports our Decision"
+  AutoCrisis.9.d:0 ""
+  AutoCrisis.9.a:0 "Who said greasing some palms was a bad thing?"
+
+  AutoCrisis.10.t:0 "Anti-Automation Protests"
+  AutoCrisis.10.d:0 ""
+  AutoCrisis.10.a:0 "This should blow over with time."
+
+  AutoCrisis.11.t:0 "The Turing Thinker Project"
+  AutoCrisis.11.d:0 ""
+  AutoCrisis.11.a:0 "We eagerly await the first report"
+
+  AutoCrisis.12.t:0 "Turing Project Progress Report"
+  AutoCrisis.12.d:0 ""
+  AutoCrisis.12.a:0 "Interesting developments"
+
+  AutoCrisis.13.t:0 "The Turing Project Continues"
+  AutoCrisis.13.d:0 ""
+  AutoCrisis.13.a:0 "We need practical applications."
+
+  AutoCrisis.14.t:0 "Turing Project Final Report"
+  AutoCrisis.14.d:0 ""
+  AutoCrisis.14.a:0 "Further developments may take some time."
+
 
   ##########################
   # DECISIONS
