--- a/localisation/english/PB_Britain_l_english.yml
+++ b/localisation/english/PB_Britain_l_english.yml
@@ -793,6 +793,12 @@
   ENG_Dirigisme_Economy:0 "British Techno-Dirigisme"
   ENG_Political_Machine:0 "Perpetually Pervasive Propaganda"
   ENG_Weaponized_Unemployment:0 "Weaponized Unemployment"
+  ENG_Megacorporate_Fury:0 "Megacorporate Fury"
+  ENG_Megacorporate_Patronage:0 "Megacorporate Patronage"
+  ENG_Automation_Protests:0 "Anti-Automation Protests"
+  ENG_Turing_Computer:0 "The Turing Project"
+  ENG_Turing_Computer_2:0 "The Turing Project"
+  ENG_Turing_Computer_3:0 "The Turing Thinker"
 
   ENG_Commonwealth_Development_Funding:0 "Commonwealth Development Programme"
   ENG_Commonwealth_Research_Funding:0 "Commonwealth Research Assistance"
@@ -952,7 +958,7 @@
   PB_Invite_Persia:0 "[PER.GetFlag] §CPressure the Persians§!"
 
   PB_ENG_Tory_Policy_Platform:0 "The Next Moves Forward"
-  PB_ENG_Tory_Policy_Platform_desc:0 "The Tories have narrowly managed to cling on to power after the catastrophe of the London Stock Crisis. With their slim majority in Parliament, the Tories can begin pushing the policies of their two principle leaders at the moment. Anthony Eden, the former prime minister, advocates for a status quo policy position and a fiscally conservative Britain, bordering on austerity. Samuel Hoare, on the other hand, leads the progressive faction of the Tories, arguing that Britain needs some form of welfare state in order to weather a future crisis."
+  PB_ENG_Tory_Policy_Platform_desc:0 "The Tories have narrowly managed to cling on to power after the catastrophe of the Automation Crisis. With their slim majority in Parliament, the Tories can begin pushing the policies of their two principle leaders at the moment. Anthony Eden, the former prime minister, advocates for a status quo policy position and a fiscally conservative Britain, bordering on austerity. Samuel Hoare, on the other hand, leads the progressive faction of the Tories, arguing that Britain needs some form of welfare state in order to weather a future crisis."
   PB_Eden_Budget_Controls:0 "Budget Control Act"
   PB_Eden_Immigration_Controls:0 "Immigration Controls Act"
   PB_Eden_Ban_Jacobinism:0 "Ban the BRF"
@@ -962,7 +968,7 @@
   PB_Hoare_Education_Funding:0 "Expand Education Funding"
 
   PB_ENG_WUP_Policy_Platform:0 "Keeping the Red Flag Flying"
-  PB_ENG_WUP_Policy_Platform_desc:0 "The Workers Union Party, after spending nearly a decade in the political wilderness, has thundered into power off the back of the Stock Crisis. Now, the duty of pushing the party platform falls to one of two men, Willie Gallacher and Oswald Mosley. Gallacher, a longtime party head, has pushed for his platform of British Bakuninism, believing that the British economy and political scene can be augmented with libertarian socialist ideas. Opposing him is Oswald Mosley, the so-called Red Right Hand of moderate ideologue Clement Attlee. Mosleys platform is far more moderate, believing that Britain requires results rather than revolution, and his alliance with Attlee is how he intends to accomplish this."
+  PB_ENG_WUP_Policy_Platform_desc:0 "The Workers Union Party, after spending nearly a decade in the political wilderness, has thundered into power off the back of the Automation Crisis. Now, the duty of pushing the party platform falls to one of two men, Willie Gallacher and Oswald Mosley. Gallacher, a longtime party head, has pushed for his platform of British Bakuninism, believing that the British economy and political scene can be augmented with libertarian socialist ideas. Opposing him is Oswald Mosley, the so-called Red Right Hand of moderate ideologue Clement Attlee. Mosleys platform is far more moderate, believing that Britain requires results rather than revolution, and his alliance with Attlee is how he intends to accomplish this."
   PB_Gallacher_Commune_Plan:0 "The Commune Plan"
   PB_Mosley_Workmans_Act:0 "The Workmans Act"
   PB_Gallacher_Workplace_Democracy_Program:0 "Workplace Democracy Act"
@@ -1439,7 +1445,7 @@
   britain.79.a:0 "We're just doing what's necessary"
 
   britain.80.t:0 "An Unfortunate Mistake"
-  britain.80.d:0 "Austerity Measures imposed as part of Cross' economic regimen have backfired catastrophically, just six months off from when they were first imposed. Despite the substantial savings we've made cutting down social spending, the sudden budget slash has dramatically impacted the countrys living standards.\n\nReductions in government spending, coupled with the lingering effects of the Stock Crisis, have lead to a massive spike in homelessness and privation. Poverty rates similarly spiked, in conjunction with crime, thanks to overall cuts in government spending and social safety programs that were maintained even under the Haig ministry.\n\nThe situation has made Edens ministry deeply unpopular with progressives and socialists, with even our established base support in the NPP and Haig Tories condemning the Austerity plan as reckless. The long term effects of the Austerity programme should dissipate over time, but the party needs to regain the trust of parliament."
+  britain.80.d:0 "Austerity Measures imposed as part of Cross' economic regimen have backfired catastrophically, just six months off from when they were first imposed. Despite the substantial savings we've made cutting down social spending, the sudden budget slash has dramatically impacted the countrys living standards.\n\nReductions in government spending, coupled with the lingering effects of the Automation Crisis, have lead to a massive spike in homelessness and privation. Poverty rates similarly spiked, in conjunction with crime, thanks to overall cuts in government spending and social safety programs that were maintained even under the Haig ministry.\n\nThe situation has made Edens ministry deeply unpopular with progressives and socialists, with even our established base support in the NPP and Haig Tories condemning the Austerity plan as reckless. The long term effects of the Austerity programme should dissipate over time, but the party needs to regain the trust of parliament."
   britain.80.a:0 "Uh...oops?"
 
   britain.81.t:0 "New Quotas for the Colonies"
