--- a/localisation/english/PB_Britain_l_english.yml
+++ b/localisation/english/PB_Britain_l_english.yml
@@ -18,6 +18,43 @@
   RULE_OPTION_ENG_NPP_PATH_DESC:0 "True British values will remain triumphant under the National Peoples Party."
 
   ##########################
+  # ORBIT WARS
+  ##########################
+
+  # UI elements
+  OWS_Earth_Icon_tt:0 "§HEarth:§!\nEarth, home of humanity. A planet fertile with life Earth is the only known planet within the Sol system, and the known universe, to be able to sustain advanced multi-cellar lifeforms. Although it may seem to be only a blink in the night sky Earth is rich with history. From ancient civilizations to the long-lasting scars of war, Earth is truly Humanities great garden of Eden. Although its finest achievement, the human race, seeks to one day spread its wings and take to the heavens. This era defining event would be known as the Orbit Wars."
+  OWS_Britain_Icon_tt:0 "[ENG.GetNameDefCap] is a major player in the Orbit Wars"
+  OWS_Russian_Icon_tt:0 "[RUS.GetNameDefCap] is a major player in the Orbit Wars"
+  OWB_Orbit_First_Satellite_ENG_Text_tt:0 "[ENG.GetNameDefCap] has put a satellite in orbit"
+  OWB_Orbit_First_Man_ENG_Text_tt:0 "[ENG.GetNameDefCap] has put a man in orbit"
+  OWB_Orbit_First_Satellite_RUS_Text_tt:0 "[RUS.GetNameDefCap] has put a satellite in orbit"
+  OWB_Orbit_First_Man_RUS_Text_tt:0 "[RUS.GetNameDefCap] has put a man in orbit"
+
+  ## No rocket part installed (empty rocket slot)
+  OWS_Test_Icon2_tt:0 "No Rocket part installed"
+  OWS_Test_Icon_tt:0 "No Rocket part installed"
+  OWS_Test_Icon3_tt:0 "No Rocket part installed"
+
+  ## Engine Parts Tooltips
+  OB1_Basic_Test_Engine_tt:0 "Basic Engine:\n   Increases §RFailure Chance§! by 25%"
+  OB1_Intermediate_Engine_tt:0 "Intermediate Engine:\n   Increases §RFailure Chance§! by 25%"
+  OB1_Advanced_Engine_tt:0 "Advanced Engine:\n   Increases §RFailure Chance§! by 25%"
+  OB1_Teleforce_Engine_tt:0 "Teleforce Engine:\n   Increases §RFailure Chance§! by 45%"
+  OB1_Atomic_Engine_tt:0 "Atomic Engine:\n   Increases §RFailure Chance§! by 45%\n   It is strongly recommended not to pair this engine with the §YNuclear Launch System§! Component"
+  
+  ## Fuel Parts Tooltips
+  OWS_Solid_Fuel_Container_tt:0 "Solid Fuel Compartment:\n   Increases §RFailure Chance§! by 5%"
+  OWS_Hybrid_Fuel_Container_tt:0 "Hybrid Fuel Compartment:\n   Increases §RFailure Chance§! by 10%"
+  OWS_Liquid_Fuel_Container_tt:0 "Liquid Fuel Compartment:\n   Increases §RFailure Chance§! by 10%"
+  OWS_Teleforce_Accelerator_tt:0 "Teleforce Accelerator:\n   Increases §RFailure Chance§! by 20%"
+  OWS_Nuclear_Reactor_tt:0 "Nuclear Reactor:\n   Increases §RFailure Chance§! by 30%"
+
+  ## Component Parts Tooltips
+  
+
+
+
+  ##########################
   # EDWARD DESC IN EXILE
   ##########################
 
