Last push by me before the update

--- a/localisation/english/PB_Britain_l_english.yml
+++ b/localisation/english/PB_Britain_l_english.yml
@@ -50,9 +50,15 @@
   OWS_Nuclear_Reactor_tt:0 "Nuclear Reactor:\n   Increases §RFailure Chance§! by 30%"
 
   ## Component Parts Tooltips
-  
-
-
+  OWS_Stellar_Research_Module_tt:0 "Stellar Research Module:\n   Increases §RFailure Chance§! by 5%\n   We will gain £research_points_small §C15 Research Points§! upon a successful launch"
+  OWS_Communications_Booster_tt:0 "Communications Booster:\n   Increases §RFailure Chance§! by 15%\n   Allows us to boost Communication Speed, increasing out nations planning speed by 25% for a short period\n   This item is critical for winning the §GPeacetime§! Orbit Wars"
+  OWS_Orbital_Research_Dome_tt:0 "Orbital Research Dome:\n   Increases §RFailure Chance§! by 25%\n   We will gain £research_points_small §C15 Research Points§! upon a successful launch"
+  OWS_Intelligence_Interceptor_tt:0 "Intelligence Interceptor:\n   Increases §RFailure Chance§! by 5%\n   Allows us to boost Decryption, significantly increasing our intelligence gathering ability for a short period"
+  OWS_Crew_Quarters_tt:0 "Crew Quarters:\n   Increases §RFailure Chance§! by 35%\n   Upon a successful launch, we will win the Peacetime Orbit Wars\n   This item is critical for winning the §GPeacetime§! Orbit Wars"
+  OWS_Relative_Kill_Vehicle_Launcher_tt:0 "Relativistic Kill Vehicle:\n   Increases §RFailure Chance§! by 40%\n   Allows us to conduct orbital bombardment on the enemy, massively reducing their repair and construction speed for a short time"
+  OWS_Space_Privateer_Team_tt:0 "Sub-Stellar Privateer Training Module:\n   Increases §RFailure Chance§! by 40%\n   Allows us to steal research points from the enemy by infiltrating their orbital infrastructure"
+  OWS_Nuclear_Launch_System_tt:0 "Atomic Launch System:\n   Increases §RFailure Chance§! by 40%\n   Allows us to launch orbital nuclear weapons at the enemy"
+  OWS_Scorched_Space_System_tt:0 "Scorched Space System:\n   Increases §RFailure Chance§! by 45%\n   Allows us to detonate an orbital denial weapon, destroying any existing satellites and preventing launches for a period of time"
 
   ##########################
   # EDWARD DESC IN EXILE
