Automation Crisis and Orbit Wars Semi-Finalized Work

--- a/localisation/english/PB_Britain_l_english.yml
+++ b/localisation/english/PB_Britain_l_english.yml
@@ -37,10 +37,10 @@
 
   ## Engine Parts Tooltips
   OB1_Basic_Test_Engine_tt:0 "Basic Engine:\n   Increases §RFailure Chance§! by 25%"
-  OB1_Intermediate_Engine_tt:0 "Intermediate Engine:\n   Increases §RFailure Chance§! by 25%"
-  OB1_Advanced_Engine_tt:0 "Advanced Engine:\n   Increases §RFailure Chance§! by 25%"
-  OB1_Teleforce_Engine_tt:0 "Teleforce Engine:\n   Increases §RFailure Chance§! by 45%"
-  OB1_Atomic_Engine_tt:0 "Atomic Engine:\n   Increases §RFailure Chance§! by 45%\n   It is strongly recommended not to pair this engine with the §YNuclear Launch System§! Component"
+  OB1_Intermediate_Engine_tt:0 "Intermediate Engine:\n   Decreases §RFailure Chance§! by 10%"
+  OB1_Advanced_Engine_tt:0 "Advanced Engine:\n   Decreases §RFailure Chance§! by 15%"
+  OB1_Teleforce_Engine_tt:0 "Teleforce Engine:\n   Decreases §RFailure Chance§! by 20%"
+  OB1_Atomic_Engine_tt:0 "Atomic Engine:\n   Decreases §RFailure Chance§! by 25%\n"
   
   ## Fuel Parts Tooltips
   OWS_Solid_Fuel_Container_tt:0 "Solid Fuel Compartment:\n   Increases §RFailure Chance§! by 5%"
@@ -131,8 +131,6 @@
   BAF_PB_Donald_Charles_Cameron:0 "Donald Charles Cameron"
   BAF_PB_Alan_Burns:0 "Alan Burns"
 
-
-
   ##########################
   # FOCUSES
   ##########################
@@ -179,8 +177,8 @@
 
   PB_ENG_King_Death:0 "The Death of the King"
   PB_ENG_King_Death_desc:0 "After suffering illness after illness, King George V slept peacefully at midnight, and with it, a new dawn shall arise. Eventually, King Edward VIII shall assume the throne, although the future of the empire remains uncertain, as our nation is facing a paradigm shift never before seen in the British Isles."
-  PB_ENG_London_Stock_Crisis:0 "The London Stock Crisis"
-  PB_ENG_London_Stock_Crisis_desc:0 "It happened, it actually happened.\n\nThe stock market has crashed, with its value cut in half and many businesses at risk of collapse. We must do whatever it takes to fix this crisis, or else we may face an uncertain and undesirable outcome in the future..."
+  PB_ENG_London_Stock_Crisis:0 "The Economic Crisis"
+  PB_ENG_London_Stock_Crisis_desc:0 "Our postwar economic situation has finally come to a head, and the EIEC's decision to promote automation has caused a significant crisis. The nation's heavy industries, the backbone of many provincial economies, are being hit hard and faith in the Haig administration has been significantly negatively impacted.\n\nWe need to address the crisis quickly, before things get out of hand."
 
   PB_ENG_General_Election:0 "The General Election"
   PB_ENG_General_Election_desc:0 "The General Elections are finally here, and this election shall decide the fate of not only Britain and her economy, but the rest of the empire as a whole. All political parties in the spectrum, from the Workers Union to the NPP, are vying for power, with varying policies that may strengthen or shaken the empire, so vote wisely."
@@ -414,13 +412,17 @@
   PB_ENG_Assess_High_Technology:0 "The High Technology Sector"
   PB_ENG_Assess_High_Technology_desc:0 "With Automation making its most serious introduction yet in Britain, a clear picture needs to be taken off our high tech industry. With more and more industries demanding the precision and strenght of automats, our high technology sector needs to accomodate and grow to keep pace. It is important that the government takes a serious look at this important sector and intervenes if necessary."
   PB_ENG_Assess_Edison_Androids:0 "Assess Edison Automatons"
+  PB_ENG_Assess_Edison_Androids_desc:0 "Edison Electric has already begun the development of early model automatons. It would be useful for us to purchase several of their prototypes to examine their engineering and get a better idea of the inner workings."
   PB_ENG_Fund_Wetware:0 "Examine Wetware Computing"
   PB_ENG_Fund_Wetware_desc:0 "While wetware isn't the newest technology on the block, employed previously by the Germans in their Panzerhounds, recent innovations in this particular area has intrigued many members of government and the scientific community. It seems almost straight out of the Frankenstein novel, but researchers have been able to extract and maintain a human brain out of its body for the first time. While it is still in its infancy, wetware promises amazing potential for future generations of automatons and body modification."
   PB_ENG_Turing_Thinker:0 "Turing and the Mechanical Turk"
+  PB_ENG_Turing_Thinker_desc:0 "The prospect of a mechanical mind isn't the newest concept, but Alan Turing and Edison Electric seem to be in the best position to make that concept a reality. With the right funding and direction, we believe that Turing's project could pave the way for Constructed Intelligence.\n\nTuring himself has jokingly nicknamed the project the "Mechanical Turk" after the old Mechanical Turk chessplaying robot, although of course this robot will presumably be legitimate."
   PB_ENG_Android_Applications:0 "Establish the Ministry of Technology"
   PB_ENG_Android_Applications_desc:0 "A modern economy runs on innovation, not sweat, tears and hard labour. With the growing high-tech industry of Britain filling in the vacuums left behind by the Automation crisis, the government felt the need to rapidly respond to the situation and establish a new ministry dedicated to this special sector of British industry. Separating the previous technological industrial duties from the ministry of economics and trade, the ministry of technology is responsible for spurring on the growth of Britain's high-end technological sector through dirigisme and interventionism."
   PB_ENG_Measured_Response:0 "Subsidize the Smaller Companies"
+  PB_ENG_Measured_Response_desc:0 "Working entirely in the public sector or with the EIEC isn't the right path. If we're to get the best return on our investments, we need to look at investing in smaller research companies such as Imperial Business Machines. These companies need our investments, and with our encouragement can prove a useful ally independent of the EIEC's influence."
   PB_ENG_Expand_Edison_Contracts:0 "Side with the Private Sector"
+  PB_ENG_Expand_Edison_Contracts_desc:0 "Edison Electric is one of the largest corporate entities on Earth, with the kind of funding that would make Mansa Musa blush. What right do we have to deny their patronage? Allowing the EIEC to expand their control over the British Empire would greatly expand their influence, but would also grant us access to their developments.\n\n After all, it's really only a monopoly if you're not part of it."
   PB_ENG_A_Thinking_Economy:0 "A Thinking Economy"
   PB_ENG_A_Thinking_Economy_desc:0 "As automation becomes more and more the norm, innovation turns into the oil with which we grease our gears. Public education needs to be geared to this new reality, as children need to expect a labour market where only the smartest are needed. You can't expect to grow up and become a hard worker anymore, Timmy! Instead, crack open a book and learn about canine nerve systems!"
   PB_ENG_Beacon_of_Technology:0 "Find the Finest Minds"
