ditching the research_english thing I added

--- a/localisation/english/PB_Technologies_l_english.yml
+++ b/localisation/english/PB_Technologies_l_english.yml
@@ -322,6 +322,10 @@
  motorized_equipment:0 "Motorised Equipment"
  mechanized_equipment:0 "Mechanised Equipment"
  cat_mechanized_equipment_research:0 "Mechanization Research Speed"
+ light_fighter_research:0 "Fighter models"
+ cat_heavy_fighter_research:0 "Heavy Fighter models"
+ cat_strategic_bomber_research:0 "Strategic Bomber models"
+ computing_tech_research:0 "Computing technology"
 
  ARTILLERT_TITLE_NA:0 "NUCLEAR ARTILLERY"
  nuclear_artillery_upgrade_1:0 "Micro-Nuke Launchers"
