--- a/localisation/english/PB_Generic_Decisions_l_english.yml
+++ b/localisation/english/PB_Generic_Decisions_l_english.yml
@@ -97,7 +97,7 @@
   PB_Sue_for_Peace:0 "Seek Peace Terms with the League"
 
   PB_Orbit_Wars_Decisions:0 "The Orbit Wars"
-  PB_Orbit_Wars_Decisions_desc:0 "\nWith the launch of the Epsilon-1 in New Alexandria, the viability of a rocket-propelled craft breaching the atmosphere and entering orbit has been proven possible, at least on paper. While the launch itself failed, the limited success has proven the potential of such enterprises.\n\nOur nation is not the first to realize this, and we must capitalize on this situation as quickly as possible. Britain and Russia have already begun plans to launch their own craft to succeed where Epsilon failed.\n\nIf we fail to acquire a hegemony over the heavens, we may face a catastrophic §ROrbital Gap§! with our rival.\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n"
+  PB_Orbit_Wars_Decisions_desc:0 "\nWith the launch of the Epsilon-1 in New Alexandria, the viability of a rocket-propelled craft breaching the atmosphere and entering orbit has been proven possible, at least on paper. While the launch itself failed, the limited success has proven the potential of such enterprises.\n\nOur nation is not the first to realize this, and we must capitalize on this situation as quickly as possible. Britain and Russia have already begun plans to launch their own craft to succeed where Epsilon failed.\n\nIf we fail to acquire a hegemony over the heavens, we may face a catastrophic §ROrbital Gap§! with our rival.\n\nIn order to §Gwin§! the Orbit Wars, we must successfully launch a communications satellite and human crewed satellite into Orbit.\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n"
   PB_Orbit_War_Debug:0 "Orbit Wars Debug Event"
   OWS_No_Orbital_Hegemony:0 "§YNO CLEAR SUPERIORITY§!"
   OWS_ENG_English_Orbital_Hegemony:0 "§GBRITAIN HAS ORBITAL SUPERIORITY§!"
@@ -149,7 +149,9 @@
   PB_Orbit_Wars_Aeronautic_Research:0 "Conduct a run of Aeronautics Research"
   PB_Orbit_Wars_Attack_Enemy_Satellite:0 "Attack Enemy Satellite"
   PB_Orbit_Wars_Activate_Combat_Satellite:0 "Activate Combat Satellite"
+  PB_Orbit_Wars_Activate_Combat_Satellite_desc:0 "This will activate our current combat satellite in orbit, if we have one active that has not expended its' abilities."
   PB_Orbit_Wars_Use_Satellite_Ability:0 "Activate Satellite Ability"
+  PB_Orbit_Wars_Use_Satellite_Ability_desc:0 "This will activate our current non-combat satellite in orbit, if we have one active that has not expended its' abilities."
   PB_Orbit_Wars_Use_Additional_Fuel:0 "Burn Additional Fuel Reserves"
   PB_Orbit_Wars_Launch_Rocket:0 "Initiate Launch"
   PB_Orbit_Wars_Reset_Rocket_Design:0 "Reset Rocket Design"
