--- a/localisation/english/PB_News_Events_l_english.yml
+++ b/localisation/english/PB_News_Events_l_english.yml
@@ -37,7 +37,7 @@
   PBNews.9.a:0 "The year of the Three Emperors"
 
   PBNews.10.t:0 "TORIES MAINTAIN MAJORITY"
-  PBNews.10.d:0 "Though many believed that the Tories would be swept out of power by the stock crisis, it seems the late Douglas Haig's party has managed to narrowly maintain their majority in parliament. Having defeated the upstart NPP and WUP, the Tories have, at least for now, defended their control of the British government.\n\nNow, it falls to the Tory party leadership to choose a new Prime Minister and form their government. With many blaming the Stock Crisis on Haig, it seems a change in course for the tories is necessary."
+  PBNews.10.d:0 "Though many believed that the Tories would be swept out of power by the automation crisis, it seems the late Douglas Haig's party has managed to narrowly maintain their majority in parliament. Having defeated the upstart NPP and WUP, the Tories have, at least for now, defended their control of the British government.\n\nNow, it falls to the Tory party leadership to choose a new Prime Minister and form their government. With many blaming the Automation Crisis on Haig, it seems a change in course for the tories is necessary."
   PBNews.10.a:0 "Good luck to them."
 
   PBNews.11.t:0 "REDS IN BRITISH PARLIAMENT"
