Little bit of America work

--- a/localisation/english/PB_SCA_l_english.yml
+++ b/localisation/english/PB_SCA_l_english.yml
@@ -212,6 +212,11 @@
   SCA_Deg_Reg_1:0 "Has completed the previous Degeneracy Tier regression decision"
   SCA_Deg_Reg_2:0 "Has completed the previous Degeneracy Tier regression decision"
   SCA_Deg_Reg_3:0 "Has completed the previous Degeneracy Tier regression decision"
+  SCA_Convince_The_Masses:0 "Convince The Masses"
+  PB_SCA_Con_Masses_tt:0 "Has not used this decisions §H5§! times"
+  SCA_Abolish_Sin:0 "Abolish Sin"
+  SCA_Abolish_Sin_tt:0 "Degeneracy Tier = §H1§!"
+  SCA_Abolish_Sin_2_tt:0 "The Degeneracy mechanic will end but any major decisions you haven't taken will still be available"
 
   ##########################
   # DYNAMIC MODIFIERS
