--- a/localisation/english/PB_United_Commonwealth_l_english.yml
+++ b/localisation/english/PB_United_Commonwealth_l_english.yml
@@ -84,6 +84,75 @@ PB_AME_Begrudging_Atlantic_Cooperation:0 "Begrudging Atlantic Cooperation"
 PB_AME_Revolution_with_an_American_France:0 "Revolution with an American France"
 PB_A_Veneer_of_Federalism:0 "Thin Veneer of Federalism"
 PB_Second_Times_the_Charm:0 "Second Time's the Charm!"
+
+PB_AME_A_Very_American_Kind_of_Crisis:0 "A Very American Kind of Crisis"
+PB_AME_The_Shelling_Solution:0 "Rush and Crush Solution"
+PB_AME_Stall_for_Time:0 "Stalling for Time"
+PB_AME_Mobilize_Rampies_and_Home_Guard:0 "Mobilize Rampies & HG"
+PB_AME_Escalation_Dominance:0 "Escalation Dominance"
+PB_AME_Accept_the_Bloody_Bonus:0 "Accept the Bloody Bonus"
+PB_AME_Philadelphia_Foots_the_Bill:0 "Philadelphia Foots the Bill"
+PB_AME_Going_Dutch_with_London:0 "Going Dutch with the Empire"
+PB_AME_A_Promise_Made_and_Kept:0 "A Promise Made and Kept"
+PB_AME_Art_of_the_Deal:0 "Art of the Deal"
+PB_AME_Meet_with_Bonus_Leaders:0 "Meet with Bonus Leaders"
+PB_AME_Moderate_the_Solution:0 "Water Down the Solution"
+PB_AME_Butler_as_Intermediary:0 "Choose Butler as Intermediary"
+PB_AME_Gradual_Bonus_Rollout:0 "Gradual Bonus Rollout"
+PB_AME_Reorganize_the_Bonus_Plan:0 "Total Bonus Plan Reorganization" 
+PB_AME_The_Special_Elections:0 "The Special Elections"
+PB_AME_The_Unionists_Stronger_than_Ever:0 "The Unionists, Stronger than Ever!"
+PB_AME_Align_with_the_Jersey_Clique:0 "Align with the Jersey Clique"
+PB_AME_Compromise_with_Southerners:0 "Compromise with Windsor"
+PB_AME_American_Renewal_Project:0 "The American Renewal Project" 
+PB_AME_Eyes_to_the_West:0 "Eyes to the West"
+PB_AME_Revoke_the_Wartime_Language_Act:0 "Revoke the Wartime Language Act"
+PB_AME_Proper_Americanism:0 "Speaking Proper American"
+PB_AME_Discourage_Anti_Papism:0 "Discourage Anti-Papism"
+PB_AME_Nation_of_Protestants:0 "Protect the Protestant Nation"
+PB_AME_Maintain_Arms_Length_Policy:0 "Maintain the Arms Length Policy"
+PB_AME_Reconcile_with_Quebec:0 "Reconciliation with Quebec"
+PB_AME_Retain_the_Francophile_Ban:0 "Retain the Francophile Ban"
+PB_AME_Deregulate_Midwestern_Politics:0 "End the Francophobe Policies"
+PB_AME_War_on_Megaplex_Unemployment:0 "The War on Megaplex Unemployment"
+PB_AME_Innovate_on_Acroplex_Farming:0 "Innovate on Acroplex Farming"
+PB_AME_Localized_Hydroponics_Scheme:0 "Localized Hydroponics"
+PB_AME_Support_Corporate_Agriculture:0 "Support the Ohio Farming Corporations"
+PB_AME_Promote_Food_Sustainability:0 "Improving the Imperial Breadbasket"
+PB_AME_End_the_Arcology_War:0 "End the Arcology Wars"
+PB_AME_Drug_Capital_of_America:0 "Experimental Drug Facilities"
+PB_AME_Subterranean_Architecture:0 "Subterranean Architecture"
+PB_AME_Special_Economic_Zones:0 "Introduce the S.E.Z. Scheme"
+PB_AME_Clean_Windy_City:0 "The Clean Windy City"
+PB_AME_Eyes_to_the_North:0 "Eyes to the North"
+PB_AME_Expand_the_Boston_Metropole:0 "Expand the Boston Metropole"
+PB_AME_Focus_on_Old_Philly:0 "Focus on Old Philly"
+PB_AME_Construct_the_Empire_City:0 "Construct the Empire City"
+PB_AME_The_Labrador_Purchase:0 "The Labrador Purchase"
+PB_AME_Fund_Annexationist_Parties:0 "Support Annexationist Parties"
+PB_AME_Joint_Administration_with_Montreal:0 "Joint Administration with Montréal"
+PB_AME_Promote_Newfoundland_Frenzy:0 "Promote the Newfoundland Frenzy"
+PB_AME_Spurned_by_London:0 "Spurned by London"
+PB_AME_Induct_the_New_Provinces:0 "Induct the New Provinces"
+PB_AME_Eyes_to_the_South:0 "Eyes to the South"
+PB_AME_Drag_the_Fencesitters:0 "A Hammer to the Fence"
+PB_AME_Improve_Freedmen_Education:0 "Improve Education Standards"
+PB_AME_Correct_the_Province_Balance:0 "Correct Budgetary Inequalities"
+PB_AME_Target_the_Secret_Empire:0 "Corner the Secret Empire"
+PB_AME_Demilitarize_Militias:0 "Demilitarize White Mobs"
+PB_AME_Equal_but_Seperate:0 "Equal, though Seperate Provinces"
+PB_AME_Soft_Landing:0 "Amend the Crittenden Compromise"
+PB_AME_Seperate_But_Equal:0 "Seperate, but Equal Provinces"
+PB_AME_Race_Representation_Councils:0 "Imagining a Racial Diet"
+PB_AME_Race_Representation_Councils_desc:0 "As tension has grown in the Dixie heartland of America, racial relations have come to the foreground of political debate in Philly. Serious solutions have been proposed, but they alternate from far too radical and revolutionary to clear white supremacist, Dixie appeasement. Thus, a kind of compromise has been drafted in the form of a race representative diet for the southern provinces, representating the white and black population of the area in a single parliament through a representative method. Some have criticized the project for its potential to empower white Dixie, while others have applauded the effort to repair race relations."
+PB_AME_Establish_the_Black_Republics:0 "Establish Home Republics"
+PB_AME_Establish_the_Black_Republics_desc:0 "A rather semi-controversial proposal among a sea of far more controversial proposals from Dixie politicians, Earnest S. Cox'x proposed \"Homeland Project\" has caught the eye of some in parliament and government. Following in the footsteps of the previous failures of the back-to-africa movements, the Homeland Republics would establish \"autonomous\" republics in the current freedmen provinces, giving the freedmen their own states while limiting our involvement in these regions, cutting spending down and ending the need for more freedmen representation in Philly, as small Freedmen parliament would give them the representation they need. Cox's proposal has been lambasted by the liberal wing of the party for its fake morality and clear intentions: this proposal would simply void freedmen citizenship, degrading the situation even further in the South."
+PB_AME_Provincial_Redlining:0 "Maintain the Red Lines"
+PB_AME_Cap_Freedmen_Funds:0 "Cut the Freedmen Budget"
+PB_AME_Litigate_White_Militias:0 "Litigate White Militias"
+PB_AME_Maintain_Literacy_Tests:0 "Preserve the Literacy Tests"
+PB_AME_Soften_Anti_Dixieism:0 "Pro-Dixie Rhetoric"
+
 ##########################
 # PARLIAMENT MECHANICS
 ##########################
