--- a/localisation/english/PB_SCA_l_english.yml
+++ b/localisation/english/PB_SCA_l_english.yml
@@ -61,6 +61,11 @@
   PB_SCA_Mobolize_The_Workers_2:0 "Mobolize The Workers"
   PB_SCA_Mobolize_The_Workers_3:0 "Mobolize The Workers"
 
+  PB_SCA_Sic_Semper_Tyrannis:0 "Sic Semper Tyrannis"
+  PB_SCA_Sic_Semper_Tyrannis_2:0 "Sic Semper Tyrannis"
+
+  PB_SCA_Grain_Shortage:0 "Crippling Grain Shortage"
+
   ##########################
   # TECHNICAL TEAMS
   ##########################
@@ -219,6 +224,14 @@
   SCA_Abolish_Sin_2_tt:0 "The Degeneracy mechanic will end but any major decisions you haven't taken will still be available"
 
   ##########################
+  # STATE RESOURCE GRAIN
+  ##########################
+
+  #No idea why this is missing loc so I am just putting it here = }
+
+  state_resource_grain:0 "State Resource Grain"
+
+  ##########################
   # DYNAMIC MODIFIERS
   ##########################
 
@@ -227,6 +240,8 @@
   SCA_Rapid_Industrialization:0 "Expanded Industrial Works"
 
   SCA_Seven_Deadly_Sins:0 "Seven Deadly Sins"
+  
+  SCA_Farmer_Riots:0 "Farmer Riots"
 
   ##########################
   # OPINION MODIFIERS
@@ -674,6 +689,10 @@
   SCA_The_All_American_Reclamation_Committee_tt:0 "\nAllows for the ability to £GFX_pol_violence §RIncite Revolutions§! in various minor North American nations."
   
   SCA_The_Great_Leap_Forward_tt_3:0 "This national spirit will §GNo Longer§! be removed when we declare war on the [AME.GetFlag] United Commonwealth\n\n"
+
+  SCA_Semper_Tyrannis_tt:0 "\nThis national spirit will be removed when we §GDefeat§! the [AME.GetFlag] United Commonwealth"
+
+  SCA_Revolution_No_Matter_The_Cost_tt:0 "Choosing this focus makes stabilizing the nation post [AME.GetFlag] United Commonwealth defeat §RExtremely Hard§! to achieve"
 
   ##########################
   # EVENTS
