--- a/localisation/english/PB_SCA_l_english.yml
+++ b/localisation/english/PB_SCA_l_english.yml
@@ -694,6 +694,8 @@
 
   SCA_Revolution_No_Matter_The_Cost_tt:0 "Choosing this focus makes stabilizing the nation post [AME.GetFlag] United Commonwealth defeat §RExtremely Hard§! to achieve"
 
+  SCA_The_Mississippi_Incident_tt:0 "Using local Jacobin collaborators we might be able to spark a §HConfrontation§! between [NDX.GetFlag] §gNew Dixie§! and the [AME.GetFlag] §CUnited Commonwealth§!. Although there is a chance this completly §RBackfires§!."
+
   ##########################
   # EVENTS
   ##########################
